# CiarciaSerialEpromProgrammer

./: .gitignore  MEMORY.md  README.md  STATUS.md  TASKS.md  pyproject.toml  requirements-dev.txt  setup.sh
.github/workflows/: lint.yml  tests.yml
docs/: DEVELOPER_GUIDE.md  EXTENDING.md  HARDWARE.md  SERIAL_PROTOCOL.md  USER_GUIDE.md
scripts/: run.sh  test.sh
src/: SerialEromPrgDriver.py
src/serial_eprom_programmer/: __init__.py  config.py  devices.py  fileformats.py  main.py  programmer.py  utils.py  worker.py
src/serial_eprom_programmer/gui/: __init__.py  help_dialog.py  main_window.py  theme_manager.py  widgets.py
tests/: __init__.py  conftest.py  test_devices.py  test_fileformats.py  test_gui.py  test_programmer.py  test_utils.py  test_worker.py
