[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serial-eprom-programmer"
version = "1.0.0"
description = "PySide6 GUI for reading/programming classic 27xx-series EPROMs via serial port"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Randy Morgan", email = "rmorgan62@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
serial-eprom-programmer = "serial_eprom_programmer.main:main"

[tool.setuptools]
packages = ["serial_eprom_programmer"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
serial_eprom_programmer = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --cov=serial_eprom_programmer --cov-report=term-missing --cov-report=html"
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["serial_eprom_programmer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]
precision = 2

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
